@@ -480,6 +480,11 @@ BOOLEAN PhShellOpenKey2(
     _In_ PPH_STRING KeyName
     );
 
+PPH_STRING PhGetServiceRelevantFileName(
+    _In_ PPH_STRINGREF ServiceName,
+    _In_ SC_HANDLE ServiceHandle
+    );
+
 #define PH_LOAD_SHARED_IMAGE(Name, Type) LoadImage(PhInstanceHandle, (Name), (Type), 0, 0, LR_SHARED)
 
 FORCEINLINE PVOID PhpGenericPropertyPageHeader(
